force-app/main/default/objects/tc9_et__Invoice_Setting__c/tc9_et__Invoice_Setting__c.object-meta.xml
<CustomObject>
    <description>A configuration object that holds details of settings used in the creation and distribution of Invoices at an Account / Invoice Record Type level</description>
    <label>Invoice Setting</label>
    <nameField>
        <displayFormat>IS-{0000000000}</displayFormat>
        <label>Invoice Setting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>