force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Account__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines, if applicable, the Bill To Account that applies to the Invoice Setting</description>
    <inlineHelpText>Defines, if applicable, the Bill To Account that applies to the Invoice Setting</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Invoice Settings</relationshipLabel>
    <relationshipName>Invoice_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>