force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Delivery_Method__c</fullName>
    <description>Defines the default method that will be used to distribute the Invoices created using this Invoice Setting. Can be overridden at the Invoice Level.</description>
    <inlineHelpText>Defines the default method that will be used to distribute the Invoices created using this Invoice Setting. Can be overridden at the Invoice Level.</inlineHelpText>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Invoice_Delivery_Method_Picklists</valueSetName>
    </valueSet>
</CustomField>