force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Effective_Date__c</fullName>
    <description>Defines the Date that the Invoice Setting will become Effective</description>
    <inlineHelpText>Defines the Date that the Invoice Setting will become Effective</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>