force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Email_Template_Online__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Email_Template_Online__c</fullName>
    <description>Defines the Email Template to be used for sending the Online Invoice</description>
    <inlineHelpText>Defines the Email Template to be used for sending the Online Invoice</inlineHelpText>
    <label>Email Template - Online</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Invoice_Email_Templates_Online</valueSetName>
    </valueSet>
</CustomField>