force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Email_Template_Single_PDF__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Email_Template_Single_PDF__c</fullName>
    <description>Defines the Email Template to be used for sending the Invoice Email with a single PDF Invoice attached</description>
    <inlineHelpText>Defines the Email Template to be used for sending the Invoice Email with a single PDF Invoice attached</inlineHelpText>
    <label>Email Template - Single PDF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Invoice_Email_Templates_PDF</valueSetName>
    </valueSet>
</CustomField>