force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Enable_0_and_Negative_Invoices__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_0_and_Negative_Invoices__c</fullName>
    <description>Defines if pay transactions with Total Including Tax of 0 or a negative value will be included during invoice creation. If No pay transactions with negative or 0 total pay values will not be included in invoices.</description>
    <inlineHelpText>Defines if pay transactions with Total Including Tax of 0 or a negative value will be included during invoice creation. If No pay transactions with negative or 0 total pay values will not be included in invoices.</inlineHelpText>
    <label>0 &amp; Negative Pay Transactions Invoiced</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>