force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Enable_Full_Approval_History__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Full_Approval_History__c</fullName>
    <description>When enabled the Invoices with Backing Sheets will retrieve and display full approval status history as provided by the record history on the status field.</description>
    <inlineHelpText>When enabled the Invoices with Backing Sheets will retrieve and display full approval status history as provided by the record history on the status field.</inlineHelpText>
    <label>Enable Full Approval History</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>