force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Enable_Project_Codes_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Project_Codes_on_Invoice__c</fullName>
    <description>Defines if Project Codes will be included on invoices</description>
    <inlineHelpText>Defines if Project Codes will be included on invoices</inlineHelpText>
    <label>Enable Project Codes on Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>