force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Enable_Total_Tax_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Total_Tax_on_Invoice__c</fullName>
    <description>Defines if the Total Tax column will be displayed in the Invoice PDF documents. This applies only to the table within the main invoice body. The invoice totals will still be shown in the header and footer of the invoice</description>
    <inlineHelpText>Defines if the Total Tax column will be displayed in the Invoice PDF documents. This applies only to the table within the main invoice body. The invoice totals will still be shown in the header and footer of the invoice</inlineHelpText>
    <label>Enable Total Tax on Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>