force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Exp_Claim_Attachments_with_Invoice__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Exp_Claim_Attachments_with_Invoice__c</fullName>
    <description>Defines if, when Invoices are emailed that have been created using this Invoice Setting, the Expense Claim Files/Attachments are included on the email</description>
    <inlineHelpText>Defines if, when Invoices are emailed that have been created using this Invoice Setting, the Expense Claim Files/Attachments are included on the email</inlineHelpText>
    <label>Exp Claim Attachments with Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>