force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Expiry_Date__c</fullName>
    <description>Defines the Date that the Invoice Setting will Expire and no longer be used</description>
    <inlineHelpText>Defines the Date that the Invoice Setting will Expire and no longer be used</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>