force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Include_Backing_Sheet__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Include_Backing_Sheet__c</fullName>
    <description>Defines if a Backing Sheet will be included on the PDF Invoices created using this Invoice Setting</description>
    <inlineHelpText>Defines if a Backing Sheet will be included on the PDF Invoices created using this Invoice Setting</inlineHelpText>
    <label>Include Backing Sheet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>