force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Invoice_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Invoice Entity that will be used on Invoices created using this Invoice Setting</description>
    <inlineHelpText>Defines the Invoice Entity that will be used on Invoices created using this Invoice Setting</inlineHelpText>
    <label>Invoice Entity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Invoice Entity defined on the Invoice Setting does not have a Record Type of Invoice Entity. Please review.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Invoice_Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Settings with Account as Invoice Entity</relationshipLabel>
    <relationshipName>Invoice_Templates1</relationshipName>
    <type>Lookup</type>
</CustomField>