force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Invoice_Group_By__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Group_By__c</fullName>
    <description>Defines how the Invoice Items related to the Account will be grouped when Invoices are created.</description>
    <inlineHelpText>Defines how the Invoice Items related to the Account will be grouped when Invoices are created.</inlineHelpText>
    <label>Invoice Group By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Invoice_Group_By_Picklists</valueSetName>
    </valueSet>
</CustomField>