force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Invoice_Item_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Item_Sort_Order__c</fullName>
    <label>Invoice Item Sort Order</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay Code Sort Order</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>