force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Invoice_Message__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Message__c</fullName>
    <description>Defines the default Message that will be included on the on PDF Invoices created using this Invoice Setting. If blank the Invoice Message defined on the Invoice Entity will be used. Can be overridden at the Invoice Level.</description>
    <inlineHelpText>Defines the default Message that will be included on the on PDF Invoices created using this Invoice Setting. If blank the Invoice Message defined on the Invoice Entity will be used. Can be overridden at the Invoice Level.</inlineHelpText>
    <label>Invoice Message</label>
    <type>TextArea</type>
</CustomField>