force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Invoice_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Record_Type__c</fullName>
    <description>Defines the Invoice Record Type that the invoice setting will be applied</description>
    <inlineHelpText>Defines the Invoice Record Type that the invoice setting will be applied</inlineHelpText>
    <label>Invoice Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Invoice_Record_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>