force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Invoice_Visualforce_Page__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Visualforce_Page__c</fullName>
    <description>Defines the Visualforce Page that will be used when rendering the PDF and Online Invoice</description>
    <inlineHelpText>Defines the Visualforce Page that will be used when rendering the PDF and Online Invoice</inlineHelpText>
    <label>Invoice Visualforce Page</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Invoice_Visualforce_Page_Picklists</valueSetName>
    </valueSet>
</CustomField>