force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Payment_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Payment Terms that apply to the Invoice Setting</description>
    <inlineHelpText>Defines the Payment Terms that apply to the Invoice Setting</inlineHelpText>
    <label>Payment Terms</label>
    <referenceTo>tc9_et__Payment_Terms__c</referenceTo>
    <relationshipLabel>Invoice Settings</relationshipLabel>
    <relationshipName>Invoice_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>