force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Send_Invoice_Emails_Setting__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Send_Invoice_Emails_Setting__c</fullName>
    <description>Defines where the email address that will be used as the from / reply to email when emailing consolidated invoices will be taken from.</description>
    <inlineHelpText>Defines where the email address that will be used as the from / reply to email when emailing consolidated invoices will be taken from.</inlineHelpText>
    <label>Send Invoice Emails Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Send_Invoice_Emails_Setting_Picklists</valueSetName>
    </valueSet>
</CustomField>