force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Split_Expenses_to_Own_Invoice__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Split_Expenses_to_Own_Invoice__c</fullName>
    <description>Defines if, when Invoices are created using this Invoice Setting, Expenses will be invoiced on a separate Invoice</description>
    <inlineHelpText>Defines if, when Invoices are created using this Invoice Setting, Expenses will be invoiced on a separate Invoice</inlineHelpText>
    <label>Split Expenses to Own Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>