force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Split_Invoice_By_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Split_Invoice_By_Project_Code__c</fullName>
    <description>Defines if, when Invoices are created using this Invoice Setting, the Invoices will be split into separate Invoices per Project Code</description>
    <inlineHelpText>Defines if, when Invoices are created using this Invoice Setting, the Invoices will be split into separate Invoices per Project Code</inlineHelpText>
    <label>Split Invoice By Project Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>