force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Split_Loading_Pay_Transactions__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Split_Loading_Pay_Transactions__c</fullName>
    <description>Defines if the loading pay transactions defined on the Interpretation Rule will be invoiced separately. If &quot;No&quot; then the Pay Code on the Interpretation Breakpoint will be the only pay transaction invoiced.</description>
    <inlineHelpText>Defines if the loading pay transactions defined on the Interpretation Rule will be invoiced separately. If &quot;No&quot; then the Pay Code on the Interpretation Breakpoint will be the only pay transaction invoiced.</inlineHelpText>
    <label>Split Loading Pay Transactions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>