force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_et__Template_Group__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Template_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Invoice Setting Template Group the Invoice Setting will apply to. Invoice Setting Templates can be related to Assignments to determine which settings to apply to related Pay Transactions.</description>
    <inlineHelpText>Defines the Invoice Setting Template Group the Invoice Setting will apply to. Invoice Setting Templates can be related to Assignments to determine which settings to apply to related Pay Transactions.</inlineHelpText>
    <label>Template Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Template_Group__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Invoice_Settings</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Template_Group__c</referenceTo>
    <relationshipLabel>Invoice Settings</relationshipLabel>
    <relationshipName>Invoice_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>