force-app/main/default/objects/tc9_et__Invoice_Setting__c/fields/tc9_util__Include_PO_in_Invoice_Grouping__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Include_PO_in_Invoice_Grouping__c</fullName>
    <description>Select &quot;Yes&quot; to group invoices by Purchase Order in addition to the selected Invoice Group By option.
If &quot;No&quot; is selected, invoices will only be grouped by the default Invoice Group By setting.</description>
    <inlineHelpText>Select &quot;Yes&quot; to group invoices by Purchase Order in addition to the selected Invoice Group By option.
If &quot;No&quot; is selected, invoices will only be grouped by the default Invoice Group By setting.</inlineHelpText>
    <label>Include PO in Invoice Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>