force-app/main/default/objects/tc9_et__Invoice_Setting__c/recordTypes/tc9_et__Invoiceable_Fees.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Invoiceable_Fees</fullName>
    <active>true</active>
    <description>To be used for defining settings relating to invoices with the record type of Invoiceable Fees or Credit Invoiceable Fees</description>
    <label>Invoiceable Fees</label>
</RecordType>