force-app/main/default/objects/tc9_et__Invoice_Setting__c/recordTypes/tc9_et__Payroll_Items.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Payroll_Items</fullName>
    <active>true</active>
    <description>To be used for defining settings relating to invoices with the record type of Payroll Items or Credit Payroll Items</description>
    <label>Payroll Items</label>
</RecordType>