force-app/main/default/objects/tc9_et__Invoice_Setting__c/listViews/tc9_et__All.listView-meta.xml
<ListView>
    <fullName>tc9_et__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_et__Account__c</columns>
    <columns>tc9_et__Invoice_Record_Type__c</columns>
    <columns>tc9_et__Invoice_Entity__c</columns>
    <columns>tc9_et__Effective_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>